--- a/inccss.css
+++ b/inccss.css
@@ -25,8 +25,14 @@ margin:50px auto;
 }
 
 .navli {
-padding: 10px;
+padding: 5px;
+margin-right: 20px;
 font-size: 1.2rem;
+cursor: pointer;
+background: mediumpurple;
+color: white;
+border: 1px solid;
+border-radius: 8%;
 }
 
 .incadd label {
@@ -60,10 +66,22 @@ clear: both;
   margin:10px;
 }
 
-.tabledivclass {
-  border-color: rgb(138,133,142);
-  width=100%;
 
+.tabledivclass {
+  /*border-color: rgb(138,133,142);*/
+  border: 2px solid;
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid mediumpurple;
+ 
+
+}
+thead {
+  background: #b19eb6;
+}
+th, td {
+  padding: 10px;
+  border-collapse: collapse;
 }
 
 .container {
